// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessagesNavItem no messages 1`] = `
<div
  className="nav-link py-0 px-0 status-messages-nav-item__nav-link btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className="btn btn-icon nav-link"
    href="#"
    onClick={[Function]}
  >
    <svg
      className="mdi-icon icon-inline"
      data-tooltip="Repositories up to date"
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14C0,17.31 2.69,20 6,20H19C21.76,20 24,17.76 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
      />
    </svg>
  </a>
  <div
    aria-hidden={true}
    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <div
      className="status-messages-nav-item__entry"
    >
      <h4>
        Repositories up to date
      </h4>
      <p>
        All repositories hosted on the configured external services are up to date.
      </p>
    </div>
  </div>
</div>
`;

exports[`StatusMessagesNavItem one CLONING message as non-site admin 1`] = `
<div
  className="nav-link py-0 px-0 status-messages-nav-item__nav-link btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className="btn btn-icon nav-link"
    href="#"
    onClick={[Function]}
  >
    <svg
      className="mdi-icon icon-inline"
      data-tooltip="Repositories up to date"
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14C0,17.31 2.69,20 6,20H19C21.76,20 24,17.76 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
      />
    </svg>
  </a>
  <div
    aria-hidden={true}
    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <div
      className="status-messages-nav-item__entry"
    >
      <h4>
        Repositories up to date
      </h4>
      <p>
        All repositories hosted on the configured external services are up to date.
      </p>
    </div>
  </div>
</div>
`;

exports[`StatusMessagesNavItem one CLONING message as site admin 1`] = `
<div
  className="nav-link py-0 px-0 status-messages-nav-item__nav-link btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className="btn btn-icon nav-link"
    href="#"
    onClick={[Function]}
  >
    <svg
      className="mdi-icon icon-inline"
      data-tooltip="Repositories up to date"
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14C0,17.31 2.69,20 6,20H19C21.76,20 24,17.76 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
      />
    </svg>
  </a>
  <div
    aria-hidden={true}
    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <div
      className="status-messages-nav-item__entry"
    >
      <h4>
        Repositories up to date
      </h4>
      <p>
        All repositories hosted on the configured external services are up to date.
      </p>
      <p
        className="status-messages-nav-item__entry-link"
      >
        <a
          to="/site-admin/external-services"
        >
          Configure external services
        </a>
      </p>
    </div>
  </div>
</div>
`;
